--- a/src/app/components/pages/create-assets/create-assets.component.html
+++ b/src/app/components/pages/create-assets/create-assets.component.html
@@ -5,4 +5,48 @@
             <button class="btn btn-primary mt-1">Add</button>
         </form>
     </div>
+    <div class="col-12 mt-2">
+        <div class="card">
+            <div class="card-body">
+                
+                <div class="custom-datatable">
+                    
+                    <input type='text' class="filter-ngx form-control" placeholder='Search...'
+                        (keyup)='updateFilter($event)' />
+                        <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+                    
+                    <!-- <select name="ordersFilter" (change)="filterOrders($event.target.value)">
+                        <option>All orders</option>
+                        <option>Primary order</option>
+                        <option>Renewal order</option>
+                        <option>Replacement order</option>
+                        <option>Return order</option>
+                    </select> -->
+                    <table class="table table-striped table-bordered" >
+                      <thead>
+                        <tr>
+                          <th>Order Id</th>
+                          <!-- <th>Payu Trans Id</th> -->
+                          <!-- <th>Prod name</th> -->
+                          <th>asset Id</th>
+                          <th>Customer name</th>
+                          <th>Mobile</th>
+                          <th>Start date</th>
+                        </tr>
+                      </thead>
+                      <tbody *ngFor="let o of order">
+                        <tr >
+                          <td>{{o.order_id}}</td>
+                          <!-- <td>{{o.prod_name}}</td>  -->
+                          <td>{{o.asset_id}}</td> 
+                          <td>{{o.firstName}} {{o.lastName}}</td>
+                          <td>{{o.mobile}}</td>
+                          <td>₹{{o.startDate | date:'dd MM yyyy'}}</td>                      
+                        </tr>                          
+                      </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
