--- a/src/app/components/products/digital/digital-list/digital-list.component.html
+++ b/src/app/components/products/digital/digital-list/digital-list.component.html
@@ -14,22 +14,29 @@
                             <option>Camera</option>
                         </select>
                         <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button>
+                        <a class="pull-right btn btn-warning mr-2 mb-2" [routerLink]="'/products/digital/digital-add-product'"> Add product</a>
                         <div class="table-responsive">
                             <!-- <ng2-smart-table [settings]="settings" [source]="productsList" (editConfirm)="onEdit(row.prod_id)" (deleteConfirm)="onDelete(row.prod_id)"></ng2-smart-table> -->
                             <table class="table table-striped table-bordered">
                                 <thead>
                                   <tr>
-                                    <th>Product Title</th>
-                                    <th>Brand</th>
+                                    <th>Product id</th>
+                                    <th>Product name</th>
+                                    <th>Qty</th>
+                                    <th>Tenure Base price</th>
+                                    <th>Security deposit</th>
                                     <th>Status</th>
                                     <th>Actions</th>
                                   </tr>
                                 </thead>
-                                <tbody>
-                                  <tr *ngFor="let row of filteredProducts">
+                                <tbody *ngFor="let row of filteredProducts">
+                                  <tr  [routerLink]="['../digital-edit-product',row.product_id]">
+                                    <td>{{row.product_id}}</td>
                                     <td>{{row.prod_name}}</td>
-                                    <td>{{row.brand_name}}</td>
-                                    <td>{{row.prod_status === '1' ? 'Active' : 'Inactive'}}</td>
+                                    <td>{{row.prod_qty}}</td>
+                                    <td>{{row.tenure_base_price}}</td>
+                                    <td>{{row.securityDeposit}}</td>
+                                    <td>{{row.prod_status === 1 ? 'Active' : 'Inactive'}}</td>
                                     <td>
                                         <div class="row">
                                             <div class="col-md-2" *appUserRole="[Role.admin,Role.sales]">
