--- a/src/app/components/users/list-user/list-user.component.html
+++ b/src/app/components/users/list-user/list-user.component.html
@@ -1,19 +1,226 @@
 <!-- Container-fluid starts-->
 <div class="container-fluid">
-    <div class="card">
-        <div class="card-header">
-            <h5>User Details</h5>
-        </div>
-        <div class="card-body">
-            <div class="btn-popup pull-right">
-                <a class="btn btn-secondary" [routerLink]="'/users/create-user'">Create User</a>
-            </div>
-            <div id="batchDelete" class="category-table custom-datatable transcation-datatable user-image">
-                <div class="table-responsive">
-                    <ng2-smart-table [settings]="settings" [source]="user_list"></ng2-smart-table>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="custom-datatable">
+                        <input type='text' class="filter-ngx form-control" placeholder='Search...'
+                            (keyup)='updateFilter($event)' />
+                            <button class="pull-right btn btn-warning ml-2" [routerLink]="'/users/create-customer'" >Create customer</button>
+                            <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+
+                        
+                        <table class="table table-striped table-bordered" >
+                          <thead>
+                            <tr>
+                              <th>Customer #</th>
+                              <th>First name</th>
+                              <th>Last name</th>
+                              <th>Mobile</th>
+                              <th>Email</th>
+                            </tr>
+                          </thead>
+                          <tbody *ngFor="let o of filteredCustomers">
+                            <tr [routerLink]="[o.customer_id]">
+                              <td>{{o.customer_id}}</td>
+                              <td>{{o.firstName}}</td>
+                              <td>{{o.lastName}}</td>
+                              <td>{{o.mobile}}</td>
+                              <td>{{o.email}}</td>                    
+                            </tr>                          
+                          </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Container-fluid Ends-->
+    <!-- Container-fluid Ends-->
+
+    <!-- <ng-template #content let-c="close" let-d="dismiss">
+        <div class="modal-header text-center">
+          <h4 class="col-12 modal-title text-center" id="modal-basic-title">Update order & refund status</h4>
+          <button type="button" class="close" aria-label="Close" (click)="d()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="row">   
+                <form enctype="multipart/form-data" [formGroup]="updateStatus" (ngSubmit)="updateDeliveryStatus(orderId)">
+                               
+                <div class="col">
+                    <label>Update Delivery Status</label>
+                        <select formControlName="deliveryStatus">
+                            <option>Order booked</option>
+                            <option>Renewed</option>
+                            <option>Waiting for KYC</option>
+                            <option>Delivered</option>
+                            <option>Shipped</option>
+                            <option>Returned</option>
+                            <option>Delivery awaited</option>
+                            <option>Partially delivered</option>
+                        </select>                        
+                </div>
+                <div class="col">
+                    <label>Update payment Status</label>
+                    <select formControlName="refundStatus">
+                            <option>awaiting payment</option>
+                            <option>Paid</option>
+                            <option>Deposit refunded</option>
+                            <option>Complete refund</option>
+                            <option>Refund initiated</option>
+                    </select>
+                </div>
+                
+                <button type="submit">Update</button>
+            </form>
+            </div>
+        </div>
+    </ng-template> -->
+
+    <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
+        <div class="modal-header text-center">
+          <h4 class="col-12 modal-title text-center" id="modal-basic-title">Order details</h4>
+          <button type="button" class="close" aria-label="Close" (click)="d()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="row" *ngFor="let o of fullOrderDetails">          
+                <div class="col">
+                    <h3>Order details</h3>
+
+                    <table class="table table-striped table-bordered" >
+                        <thead>
+                          <tr>
+                            <th>Order Id</th>
+                            <th>Payu Trans Id</th>
+                            <th>User Id</th>
+                            <th>Order date</th>
+                          </tr>
+                        </thead>
+                        <tbody *ngFor="let o of fullOrderDetails">
+                          <tr>
+                            <td>{{o.txnid}}</td>
+                            <td>{{o.payuid}}</td>
+                            <td>{{o.userId}}</td>
+                            <td>{{o.orderdate}}</td>                         
+                          </tr>                          
+                        </tbody>
+                      </table>
+
+                    <h3>Product details</h3>
+                    <table class="table table-striped table-bordered" *ngFor="let o of fullOrderDetails">
+                        <thead>
+                          <tr>
+                            <th>prod id</th>
+                            <th>Prod name</th>
+                            <th *ngIf="o.order_type!='Renewal order'">Qty</th>
+                            <th *ngIf="o.order_type!='Renewal order'">Tenure</th>
+                            <th *ngIf="o.order_type!='Renewal order'">Security Deposit</th>
+                            <th>Rent/mo</th>
+                            <th *ngIf="o.order_type!='Renewal order'">Expected Delivery Date</th>
+                            <th *ngIf="o.order_type!='Return order'">Start date</th>
+                            <th *ngIf="o.order_type!='Return order'">Expiry date</th>
+                            <th *ngIf="o.order_type!='Return order'">Due date</th>
+                            <th *ngIf="o.order_type=='Return order'">Return date</th>
+                            <th>Asset #</th>
+                          </tr>
+                        </thead>
+                        <tbody *ngFor="let p of o.checkoutItemData">
+                          <tr *ngIf="p.ordered==1 && o.order_type=='Primary order'">
+                            <td>{{p.id}}</td>
+                            <td>{{p.prod_name}}</td>
+                            <td>{{p.qty}}</td>
+                            <td>{{p.tenure}}</td>
+                            <td>₹{{p.prod_price}}</td>
+                            <td>₹{{(p.price-0) + (p.dp-0)}}</td>
+                            <td>{{p.delvdate}}</td> 
+                            <td>{{p.startDate}}</td>
+                            <td>{{p.expiryDate}}</td>
+                            <td>{{dueDate(p.startDate)}}</td>
+                            <td>{{p.assetId}}</td>                                                       
+                          </tr>           
+                          <tr *ngIf="p.renewed==4 && o.order_type=='Renewal order'">
+                            <td>{{p.id}}</td>
+                            <td>{{p.prod_name}}</td>
+                            <td>₹{{(p.price-0) + (p.dp-0)}}</td>
+                            <td>{{p.startDate}}</td>
+                            <td>{{p.expiryDate}}</td>
+                            <td>{{dueDate(p.startDate)}}</td>
+                            <td>{{p.assetId}}</td> 
+                                                      
+                          </tr>   
+                          <tr *ngIf="p.ordered==1 && o.order_type=='Replacement order'">
+                            <td>{{p.returnedProduct.id}}</td>
+                            <td>{{p.returnedProduct.prod_name}}</td>
+                            <td>{{p.returnedProduct.qty}}</td>
+                            <td>{{p.returnedProduct.tenure}}</td>
+                            <td>₹{{p.returnedProduct.prod_price}}</td>
+                            <td>₹{{(p.returnedProduct.price-0) + (p.returnedProduct.dp-0)}}</td>
+                            <td>{{p.returnedProduct.delvdate}}</td> 
+                            <td>{{p.returnedProduct.startDate}}</td>
+                            <td>{{p.returnedProduct.expiryDate}}</td>
+                            <td>{{dueDate(p.returnedProduct.startDate)}}</td>
+                            <td>{{p.returnedProduct.assetId}}</td>                                                       
+                          </tr>  
+                          <h5 *ngIf="p.ordered==1 && o.order_type=='Replacement order'">Replaced product</h5>
+                          <tr *ngIf="p.ordered==1 && o.order_type=='Replacement order'">
+                            <td>{{p.id}}</td>
+                            <td>{{p.prod_name}}</td>
+                            <td>{{p.qty}}</td>
+                            <td>{{p.tenure}}</td>
+                            <td>₹{{p.prod_price}}</td>
+                            <td>₹{{(p.price-0) + (p.dp-0)}}</td>
+                            <td>{{p.delvdate}}</td> 
+                            <td>{{p.startDate}}</td>
+                            <td>{{p.expiryDate}}</td>
+                            <td>{{dueDate(p.startDate)}}</td>
+                            <td>{{p.assetId}}</td>                                                       
+                          </tr> 
+                          <tr *ngIf="o.order_type=='Return order'">
+                            <td>{{p.id}}</td>
+                            <td>{{p.prod_name}}</td>
+                            <td>{{p.qty}}</td>
+                            <td>{{p.tenure}}</td>
+                            <td>₹{{p.prod_price}}</td>
+                            <td>₹{{(p.price-0) + (p.dp-0)}}</td>
+                            <td>{{p.delvdate}}</td> 
+                            <td>{{p.returnDate}}</td>
+                            <td>{{p.assetId}}</td>                                                       
+                          </tr>               
+                        </tbody>
+                    </table>
+
+                    <div *ngFor="let o of fullOrderDetails" class="pull-right">
+                        <div *ngIf="o.order_type!='Replacement order'">
+                          <h4>Sub total: ₹{{subTotal}}</h4>
+                          <h4>Taxes: {{totalTaxAmount(subTotal)}}</h4>
+                          <h4>Total security deposit: <span>₹{{o.securitydeposit}}</span></h4>
+                          <h4>Grand Total: <span>₹{{o.amount}}</span></h4>
+                        </div>
+                        <div *ngIf="o.order_type=='Replacement order'">
+                          <h4>Difference rent: ₹{{diffInRent}}</h4>
+                          <h4>Damage / Delivery Charges: {{ddCharges}}</h4>
+                          <h4>Taxes: {{totalTaxAmount(diffInRent+ddCharges)}}</h4>
+                          <h4>Sub total: {{diffInRent+ddCharges+totalTaxAmount(diffInRent+ddCharges)}}</h4>
+                          <h4>Difference security deposit: <span>₹{{diffInDeposit}}</span></h4>
+                          <h4>Grand Total: <span>₹{{o.amount}}</span></h4>
+                        </div>
+                    </div> 
+                    
+                    <div class="addr">
+                        <hr>
+                        <h3>Billing Address</h3>
+                        <div *ngFor="let o of fullOrderDetails">
+                            <h4>Name: <span>{{o.fname}}</span></h4>
+                            <h4>Address: <span>{{o.address}},{{o.city}}-{{o.pincode}}.</span></h4>
+                            <h4>Mobile: <span>{{o.mobile}}</span></h4>
+                            <h4>Email: <span>{{o.email}}</span></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-template>
