--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,12 +3,12 @@
         src="assets/images/dashboard/multikart-logo.png" alt=""></a></div>
 </div>
 <div class="sidebar custom-scrollbar">
-  <div class="sidebar-user text-center">
+  <!-- <div class="sidebar-user text-center">
     <div><img class="img-60 rounded-circle" src="assets/images/dashboard/man.png" alt="#">
     </div>
     <h6 class="mt-3 f-14">JOHN</h6>
     <p>general manager.</p>
-  </div>
+  </div> -->
   <ul class="sidebar-menu">
     <li *ngFor="let menuItem of menuItems" [ngClass]="{active: menuItem.active}">
       <!-- Sub -->
